--- a/nyan-server/Cargo.toml
+++ b/nyan-server/Cargo.toml
@@ -14,6 +14,7 @@ edition = "2018"
     actix-session = "0.3.0"
     actix-utils = "1.0.3"
     actix-multipart="0.2.0"
+    actix-identity="0.2.1"
     bytes = { version = "0.5", features = ["serde"] }
     mime="0.3.14"
     futures = "0.3.1"
