--- a/nyan-server/Cargo.toml
+++ b/nyan-server/Cargo.toml
@@ -15,6 +15,7 @@ edition = "2018"
     actix-utils = "1.0.3"
     actix-multipart="0.2.0"
     actix-identity="0.2.1"
+    actix-cors="0.2.0"
     bytes = { version = "0.5", features = ["serde"] }
     mime="0.3.14"
     futures = "0.3.1"
