--- a/nyan-server/Cargo.toml
+++ b/nyan-server/Cargo.toml
@@ -7,18 +7,17 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-    openssl = { version = "0.10", features = ["v110"] }
     async-std = "1.4.0" 
     actix-rt="1.0.0"
-    actix-web = { version = "2.0", features = ["openssl"] }
+    actix-web = { version = "2.0"}
     actix-files = "0.2.1"
     actix-session = "0.3.0"
     actix-utils = "1.0.3"
     actix-multipart="0.2.0"
     actix-identity="0.2.1"
     actix-cors="0.2.0"
-    lettre = "0.9.3"
-    lettre_email = "0.9.3"
+    lettre = "0.9"
+    lettre_email = "0.9"
     bytes = { version = "0.5", features = ["serde"] }
     mime="0.3.14"
     futures = "0.3.1"
