mailing service added

--- a/nyan-server/.env
+++ b/nyan-server/.env
@@ -6,3 +6,6 @@ PG.PASSWORD=kantemir
 PG.HOST=127.0.0.1
 PG.PORT=5432
 PG.DBNAME=projects
+
+MAIL.USER=monkey@baizuo.online
+MAIL.PASSWORD=Xw#jqfNMgVZQD6!
