--- a/nyan-server/Cargo.toml
+++ b/nyan-server/Cargo.toml
@@ -16,6 +16,7 @@ edition = "2018"
     actix-multipart="0.2.0"
     actix-identity="0.2.1"
     actix-cors="0.2.0"
+    bcrypt = "0.8"
     lettre = "0.9"
     lettre_email = "0.9"
     bytes = { version = "0.5", features = ["serde"] }
