--- a/nyan-server/Cargo.toml
+++ b/nyan-server/Cargo.toml
@@ -17,8 +17,8 @@ edition = "2018"
     actix-identity="0.2.1"
     actix-cors="0.2.0"
     bcrypt = "0.8"
+    serde_json = "1.0"
     handlebars = { version = "3.0.0", features = ["dir_source"] }
-
     lettre = "0.9"
     lettre_email = "0.9"
     bytes = { version = "0.5", features = ["serde"] }
